--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li><a href="hesi_apnews_coverage.html">HESI AP News Coverage</a></li>
         <li><a href="hesi_reuters_coverage.html">HESI Reuters Coverage</a></li>
         <li><a href="hesi_wildfire_coverage.html">HESI Wildfire Coverage</a></li>
+        <li><a href="hesi_ohio-derailment_coverage.html">HESI Ohio Derailment Coverage</a></li>
     </ul>
     
     <h2>RESIN Coverage</h2>
